--- a/project3/stuff/emails/47872.html
+++ b/project3/stuff/emails/47872.html
@@ -1,3 +1,5 @@
+Date: Sat, 22 Oct 2022 10:56:41 GMT
+
 compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Monica Sky" <monica.l.sky@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="Chris Cox" <chris.nixon.cox@mail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=Re: xoxo&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=<div>
     <div>Warm weather in the winter!? sounds perfect! I already started to look into hotels. What do you think about this beach resort in the image?<br />
     <br />
