--- a/project3/stuff/emails/16082.html
+++ b/project3/stuff/emails/16082.html
@@ -1,3 +1,5 @@
+Date: Sat, 22 Oct 2022 10:49:30 GMT
+
 compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Monica Sky" 
 <monica.l.sky@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="Chris Cox" 
 <chris.nixon.cox@mail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=xoxo&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=
