--- a/project3/stuff/emails/69971.html
+++ b/project3/stuff/emails/69971.html
@@ -1,6 +1,9 @@
 Date: Sat, 22 Oct 2022 11:07:58 GMT
 
-compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Chris Cox" <chris.nixon.cox@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="real.life.trinity" <real.life.trinity@protonmail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=Re: We know.&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=<div>If I had a dollar for every extortion email I received I would give 5 million right now... I commend you for the effort but surely you can do better than the moon landing ahahah.</div>
+compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Chris Cox" 
+<chris.nixon.cox@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="real.life.trinity" 
+    <real.life.trinity@protonmail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=Re: We know.&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=
+    <div>If I had a dollar for every extortion email I received I would give 5 million right now... I commend you for the effort but surely you can do better than the moon landing ahahah.</div>
 
 <div>&nbsp;
 <div>&nbsp;
