--- a/project3/stuff/emails/76371.html
+++ b/project3/stuff/emails/76371.html
@@ -1,6 +1,9 @@
 Date: Sat, 22 Oct 2022 11:12:14 GMT
 
-compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Chris Cox" <chris.nixon.cox@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="real.life.trinity" <real.life.trinity@protonmail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=Re: We know.&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=<div>Listen, I don&#39;t think you understand with who you are talking to. I suggest you give up on whatever plan you have while still let you.</div>
+compose-form_hf_0=&composeHeader:from:mailObjectContent:content:dropdown="Chris Cox" 
+<chris.nixon.cox@mail.com>&composeHeader:to:mailObjectContent:content:multiObjectInput="real.life.trinity" 
+    <real.life.trinity@protonmail.com>&composeHeader:cc:mailObjectContent:content:multiObjectInput=&composeHeader:bcc:mailObjectContent:content:multiObjectInput=&composeHeader:subject:mailObjectContent:mailObjectInput=Re: We know.&attachments:scratchIdList=&attachments:uploadMessage=&attachments:filenames=&transferOptions:priority=NORMAL&body=
+    <div>Listen, I don't think you understand with who you are talking to. I suggest you give up on whatever plan you have while still let you.</div>
 
 <div>&nbsp;
 <div>&nbsp;
